--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.0"
+    "react-scripts": "^2.0.4"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "axios": "^0.18.0",
     "immutability-helper": "^2.1.1",
     "keycode-js": "^0.0.4",
     "react": "^15.4.2",
@@ -18,5 +19,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
